# Ludika

./: .gitignore  README.md
.github/workflows/: build-backend-docker.yml  build-frontend-docker.yml
ludika-backend/: .gitignore  README.md  config.ini.example  pyproject.toml
ludika-backend/ludika_backend/: __main__.py  api.py
ludika-backend/ludika_backend/controllers/: ai.py  auth.py  image_ops.py  image_web_scraping.py  reddit_scraping.py
ludika-backend/ludika_backend/controllers/ai/: agents.py  llms.py  prompts.py  reddit_jobs.py  tools.py
ludika-backend/ludika_backend/controllers/scraping/: web_images.py
ludika-backend/ludika_backend/models/: __init__.py  auth.py  games.py  review.py  users.py
ludika-backend/ludika_backend/routes/: ai.py  auth.py  games.py  review.py  tags.py  users.py
ludika-backend/ludika_backend/util/: config.py  db.py
ludika-backend/ludika_backend/utils/: counter.py  db.py  image_ops.py  logs.py  uri_safety.py
ludika-backend/static/: .gitignore  README.md
ludika-db/: README.md  schema.sql
ludika-deployment/: README.md  docker-compose.yml  nginx.conf  proxy.nginx
ludika-deployment/docker/: backend.dockerfile  frontend.dockerfile
ludika-docs/: README.md
ludika-docs/diagrams/: AI Pipeline.drawio  Architecture.drawio  login_sequence.mmd
ludika-docs/paper/: .gitignore  ludika_doc.tex  pii_relazione.tex
ludika-docs/paper/includes/: .gitignore  api_schema.tex
ludika-docs/tools/: apissima.py
ludika-frontend/: README.md  package.json  pnpm-lock.yaml
ludika-frontend/ludika-frontend/: README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
ludika-frontend/ludika-frontend/app/: app.vue  vuestic.config.ts
ludika-frontend/ludika-frontend/app/components/: AddRatingCard.vue  AddWeightCard.vue  GameCard.vue  (+19 more)
ludika-frontend/ludika-frontend/plugins/: fontawesome.js
ludika-frontend/ludika-frontend/public/: site.webmanifest
ludika-frontend/ludika-frontend/types/: auth.ts  game.ts
ludika-frontend/nuxt-app/: nuxt.config.ts  package.json  pnpm-lock.yaml
ludika-graphics/: Ludika.afdesign  README.md
(+24 files in other folders)
