[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ludika-backend"
version = "0.1.0"
description = ""
authors = [{ name = "TheManchineel", email = "37479927+TheManchineel@users.noreply.github.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.12,<0.116",
    "pydantic>=2.11.3,<3",
    "sqlmodel>=0.0.24,<0.0.25",
    "psycopg>=3.2.6,<4",
    "uvicorn>=0.34.2,<0.35",
    "requests>=2.32.3,<3",
    "python-jose[cryptography]>=3.4.0,<4",
    "authlib>=1.5.2,<2",
    "pyjwt>=2.10.1,<3",
    "itsdangerous>=2.2.0,<3",
    "google-auth>=2.40.1,<3",
    "httpx>=0.28.1,<0.29",
    "psycopg-binary>=3.2.9",
    "argon2-cffi>=25.1.0",
    "python-multipart>=0.0.20",
    "pillow>=11.3.0",
    "langchain[google-genai]>=0.3.27",
    "langchain-tavily>=0.2.11",
    "langchain-community>=0.3.27",
    "wikipedia>=1.4.0",
]
